--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <li><a class="smoothscroll" href="#about">About me</a></li>
                         <li><a class="smoothscroll" href="#works">Projects</a></li>
                         <li><a class="smoothscroll" href="#footer">Contact</a></li>
+                        <li><a class="smoothscroll" href="https://cassiodeveloper.com.br/en"><img width="20px" height="15px" src="images/icons/en-us.svg" alt="English version" title="English version" /></a></li>
                     </ul>
                 </nav>
             </div>
