--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li><a class="smoothscroll" href="#about">About me</a></li>
                         <li><a class="smoothscroll" href="#works">Projects</a></li>
                         <li><a class="smoothscroll" href="#footer">Contact</a></li>
-                        <li><a class="smoothscroll" href="https://cassiodeveloper.com.br/en"><img width="20px" height="15px" src="images/icons/en-us.svg" alt="English version" title="English version" /></a></li>
+                        <li><a class="smoothscroll" target="_blank" href="https://cassiodeveloper.com.br/en"><img width="20px" height="15px" src="images/icons/en-us.svg" alt="English version" title="English version" /></a></li>
                     </ul>
                 </nav>
             </div>
@@ -374,7 +374,7 @@
                             <ul class="link-list">
                                 <li><a href="mailto:cassio@cassiobp.com.br">cassio@cassiobp.com.br</a></li>
                                 <li><a href="tel:+5511999430820">+55 11 999 430 820</a></li>
-                                <li><a class="smoothscroll" href="https://cassiodeveloper.com.br/en"><img width="20px" height="15px" src="images/icons/en-us.svg" alt="English version" title="English version" /></a></li>
+                                <li><a class="smoothscroll" target="_blank" href="https://cassiodeveloper.com.br/en"><img width="20px" height="15px" src="images/icons/en-us.svg" alt="English version" title="English version" /></a></li>
                             </ul> 
                         </div>
                     </div>                    
