--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             </div>
             <div class="row folio-entries">
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-turban.jpg" class="entry__link glightbox" data-glightbox="title: Codes & Consequences Cap; description: .entry__desc-01">
+                    <a href="images/folio/loading.png" class="entry__link glightbox" data-glightbox="title: Codes & Consequences Cap; description: .entry__desc-01">
                         <div class="entry__thumb">
-                            <img src="images/folio/white_turban.jpg" srcset="images/folio/white_turban.jpg 1x, images/folio/white_turban@2x.jpg 2x" alt="" />
+                            <img src="images/folio/loading.png" srcset="images/folio/loading.png 1x, images/folio/white_turban@2x.jpg 2x" alt="" />
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Codes & Consequences</h4>
