--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="row folio-entries">
                 <div class="column entry">
-                    <a href="images/folio/loading.png" class="entry__link glightbox" data-glightbox="title: Codes & Consequences Cap; description: .entry__desc-01">
+                    <a href="images/folio/loading.png" class="entry__link glightbox" data-glightbox="title: Codes & Consequences; description: .entry__desc-01">
                         <div class="entry__thumb">
                             <img src="images/folio/loading.png" srcset="images/folio/loading.png 1x, images/folio/white_turban@2x.jpg 2x" alt="" />
                         </div>
