--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 <div class="column lg-12 s-intro__content-inner grid-block grid-16">
                     <div class="s-intro__content-text">
                         <div class="s-intro__content-pretitle text-pretitle">Olá :)</div>
-                        <h1 class="s-intro__content-title">Eu sou Cássio B. Pereira <br />Expert em AppSec <br />morando na Europa.</h1>                            
+                        <h1 class="s-intro__content-title">Eu sou Cássio Pereira, <br />Expert em Segurança de Aplicações</h1>
+                        <div class="s-intro__content-pretitle text-pretitle">#AppSec #DevSecOps</div>
                         <div class="s-intro__content-btns">
                             <a class="smoothscroll btn" href="#about">Mais sobre mim</a>
                             <a class="smoothscroll btn btn--stroke" href="#footer">Entre em contato</a>
