--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
             <div class="row folio-entries">
                 <div class="column entry">
-                    <a href="images/folio/cc.png" class="entry__link glightbox" data-glightbox="title: Códigos e Consequências; description: .entry__desc-01">
+                    <a href="images/folio/ccw.png" class="entry__link glightbox" data-glightbox="title: Códigos e Consequências; description: .entry__desc-01">
                         <div class="entry__thumb">
                             <img src="images/folio/cc.png" srcset="images/folio/cc.png 1x, images/folio/white_turban@2x.jpg 2x" alt="Códigos & Consequências" />
                         </div>
